chore(ui tests): re-added specific ui test jvm params